[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Extensions/ExportExtras/Main.gd" type="Script" id=1]
[ext_resource path="res://src/Extensions/ExportExtras/Dialogs/ExportDialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Extensions/ExportExtras/Dialogs/FileDialog.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Extensions/ExportExtras/Scripts/ExportExtrasM.gd" type="Script" id=4]
[ext_resource path="res://src/Extensions/ExportExtras/Scripts/ImportExtrasM.gd" type="Script" id=5]
[ext_resource path="res://src/Extensions/ExportExtras/Dialogs/ImportDialog.tscn" type="PackedScene" id=6]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Dialog" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="ExportDialog" parent="Dialog" instance=ExtResource( 2 )]
unique_name_in_owner = true
popup_exclusive = true

[node name="ExportFileDialog" parent="Dialog" instance=ExtResource( 3 )]
unique_name_in_owner = true

[node name="ImportDialog" parent="Dialog" instance=ExtResource( 6 )]
unique_name_in_owner = true

[node name="SliceModeButton" parent="Dialog/ImportDialog/VBoxContainer/HBoxContainer2" index="0"]
items = [ "rows", null, false, 0, null, "columns", null, false, 1, null ]

[node name="ImportFileDialog" parent="Dialog" instance=ExtResource( 3 )]
unique_name_in_owner = true
window_title = "Abrir un Archivo"
mode = 0

[node name="Scripts" type="Node" parent="."]

[node name="ExportExtras" type="Node" parent="Scripts"]
unique_name_in_owner = true
script = ExtResource( 4 )

[node name="ImportExtras" type="Node" parent="Scripts"]
unique_name_in_owner = true
script = ExtResource( 5 )

[connection signal="confirmed" from="Dialog/ExportDialog" to="Scripts/ExportExtras" method="_on_ExportDialog_confirmed"]
[connection signal="popup_hide" from="Dialog/ExportDialog" to="Scripts/ExportExtras" method="_on_ExportDialog_popup_hide"]
[connection signal="pressed" from="Dialog/ExportDialog/VBoxContainer/VBoxContainer/HBoxContainer3/InverseCCheckBox" to="Scripts/ExportExtras" method="_on_InverseCCheckBox_pressed"]
[connection signal="pressed" from="Dialog/ExportDialog/VBoxContainer/VBoxContainer/HBoxContainer5/InverseRCheckBox" to="Scripts/ExportExtras" method="_on_InverseRCheckBox_pressed"]
[connection signal="pressed" from="Dialog/ExportDialog/VBoxContainer/VBoxContainer/HBoxContainer4/IgnoreHLayersCheckBox" to="Scripts/ExportExtras" method="_on_IgnoreHLayersCheckBox_pressed"]
[connection signal="pressed" from="Dialog/ExportDialog/VBoxContainer/VBoxContainer/HBoxContainer/PathButton" to="Scripts/ExportExtras" method="_on_PathButton_pressed"]
[connection signal="text_changed" from="Dialog/ExportDialog/VBoxContainer/VBoxContainer/HBoxContainer2/FilenameLineEdit" to="Scripts/ExportExtras" method="_on_FilenameLineEdit_text_changed"]
[connection signal="dir_selected" from="Dialog/ExportFileDialog" to="Scripts/ExportExtras" method="_on_FileDialog_dir_selected"]
[connection signal="confirmed" from="Dialog/ImportDialog" to="Scripts/ImportExtras" method="_on_ImportDialog_confirmed"]
[connection signal="value_changed" from="Dialog/ImportDialog/VBoxContainer/HBoxContainer/RowsSpinBox" to="Scripts/ImportExtras" method="_on_RowsSpinBox_value_changed"]
[connection signal="value_changed" from="Dialog/ImportDialog/VBoxContainer/HBoxContainer/ColumnsSpinBox" to="Scripts/ImportExtras" method="_on_ColumnsSpinBox_value_changed"]
[connection signal="item_selected" from="Dialog/ImportDialog/VBoxContainer/HBoxContainer2/SliceModeButton" to="Scripts/ImportExtras" method="_on_SliceModeButton_item_selected"]
[connection signal="pressed" from="Dialog/ImportDialog/VBoxContainer/HBoxContainer2/SplitLayerCheckBox" to="Scripts/ImportExtras" method="_on_SplitLayerCheckBox_pressed"]
[connection signal="pressed" from="Dialog/ImportDialog/VBoxContainer/HBoxContainer2/CreateProjectCheckBox" to="Scripts/ImportExtras" method="_on_CreateProjectCheckBox_pressed"]
[connection signal="file_selected" from="Dialog/ImportFileDialog" to="Scripts/ImportExtras" method="_on_ImportFileDialog_file_selected"]

[editable path="Dialog/ExportDialog"]
[editable path="Dialog/ExportFileDialog"]
[editable path="Dialog/ImportDialog"]
